# farsight-markets

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/strategies/: arb.yaml  cross_venue.yaml  momentum.yaml  resolution.yaml  scanner.yaml
farsight/markets/: VALIDATED_ASSUMPTIONS.md  __init__.py  __main__.py  app.py  cli.py  config.py  executor.py  policy.py  runner.py  store.py  telemetry.py  telemetry_dashboard.py  telemetry_pager.py  telemetry_tail.py
farsight/markets/core/: __init__.py  auth.py
farsight/markets/engine/: checkpoint.py  event_bus.py  window.py
farsight/markets/features/: microstructure.py  probability.py  quality.py  technicals.py
farsight/markets/routes/: explore_routes.py
farsight/markets/schemas/: events.py  signals.py  ticks.py
farsight/markets/services/: correlation_service.py  feature_engine.py  outcome_tracker.py  replay_service.py  session_service.py  signal_engine.py  state_engine.py  theme_service.py
farsight/markets/strategies/: README.md  base.py  config.py  cross_event_arb.py  cross_venue_arb.py  momentum_tracker.py  (+4 more)
scripts/: close_sessions.py
tests/: test_checkpoint.py  test_correlation.py  test_event_bus.py  test_features.py  test_gamma_client.py  test_kalshi_client.py  test_phase0.py  test_replay.py  test_rolling_window.py  test_schemas.py  test_signal_engine.py  test_state_engine.py  test_store.py  test_strategies.py  test_technicals.py  test_theme_service.py  test_venue_matcher.py  test_ws_client.py
(+4 files in other folders)
